updates to responsive mobile whitespace issue

--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -385,6 +385,7 @@
     position: relative;
     display: flex;
     justify-content: center;
+    height: 40vh;
 }
 
 
